--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>{% endif %}
   {% if page.is_amp %}<style amp-custom>{% else %}<style>{% endif %}{% include style.css %}</style>
   {% include html/json-homepage.html %}
-  {% if page.url contains "/search" %}<link rel="dns-prefetch" href="//unpkg.com"><link rel="preload" as="script" href="https://unpkg.com/lunr/lunr.js"><script src="https://unpkg.com/lunr/lunr.js" async></script>{% endif %}{% include script-head.js %}
+{% include script-head.js %}
 </head>
 <body {% if page.is_amp %}[class]="visible ? 'dark' : 'light'"{% else %}class="light"{% endif %}>
 {% include header.html %}
