--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,7 @@
 <html {% if page.is_amp %}amp {% endif %}lang="{{ page.lang | default: site.lang }}">
 <head>
   {% include meta.html %}
-  {% if page.is_amp %}<script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-  <script async='async' custom-element='amp-bind' src='https://cdn.ampproject.org/v0/amp-bind-0.1.js'></script>
-  <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
-  {% if content contains "<amp-iframe" %}<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>{% endif %}
+  {% if page.is_amp %}
   <style amp-boilerplate>body{visibility:hidden;-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
   <noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>{% endif %}
   {% if page.is_amp %}<style amp-custom>{% else %}<style>{% endif %}{% include style.css %}</style>
@@ -24,6 +20,8 @@
 {% include right-sidebar.html %}
 </div>
 {% include noprint.html %}
-{% unless is_amp %}{% include script-body.js %}{% endunless %}
+{% if page.is_amp %}<amp-auto-ads type="adsense" data-ad-client="ca-pub-4951061355072034">
+</amp-auto-ads>{% endif %}
+{% unless page.is_amp %}{% include script-body.js %}{% endunless %}
 </body>
 </html>
