remove sidebar on default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 <main aria-label="Main Wrapper" class="content-wrapper hide-on-print" id="content-wrapper">
 {{ content }}
 </main>
-{% unless page.layout == "default" %}{% include right-sidebar.html %}{% endunless %}
+{% assign column_layouts = "default,archive" | split: "," %}
+{% unless column_layouts contains page.layout %}{% include right-sidebar.html %}{% endunless %}
 </div>
 {% include noprint.html %}
 {% if page.is_amp %}<amp-auto-ads type="adsense" data-ad-client="ca-pub-4951061355072034">
