--- a/_includes/style.css
+++ b/_includes/style.css
@@ -119,6 +119,11 @@ body.dark .post-container .author{color:#aaa}
 body.dark .post-container .post-container{border-color:#444}
 body.dark .post-container .summary{color:#ddd}
 {% endif %}
+.media-container{position:relative;height:0;max-width:100%;overflow:hidden}
+.media-container .media{position:absolute;top:0;left:0;width:100%;height:100%;border:none}
+.media-container.landscape{padding-bottom:56.25%}
+.media-container.portrait{padding-bottom:177%}
+.media-container.square{padding-bottom:100%}
 {% if content contains "<h2" %}
 .toc{background:#f8f9fa;padding:15px;border-left:4px solid var(--theme-color);margin-bottom:20px;transition:background 0.3s,color .3s}
 .toc h2{font-size:1.2rem;margin-bottom:10px}
