--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   {% include html/json-homepage.html %}
 {% include script-head.js %}
 </head>
-<body {% if page.is_amp %}[class]="visible ? 'dark' : 'light'"{% else %}class="light"{% endif %}>
+<body {% if page.is_amp %}[class]="visible ? 'dark' : 'light'"{% else %}class="light"{% endif %} id="top">
 {% include header.html %}
 {% include nav.html %}
 {% include html/leaderboard_ads.html %}
@@ -23,6 +23,11 @@
 {% include noprint.html %}
 {% if page.is_amp %}<amp-auto-ads type="adsense" data-ad-client="ca-pub-4951061355072034">
 </amp-auto-ads>{% endif %}
+<a href="#top" class="back-to-top" aria-label="Back to Top">
+<svg viewBox="0 0 24 24" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#004AAD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+<polyline points="18 15 12 9 6 15" />
+</svg>
+</a>
 {% unless page.is_amp %}{% include script-body.js %}{% endunless %}
 </body>
 </html>
