make breadcrumb one liner

--- a/_includes/html/breadcrumb.html
+++ b/_includes/html/breadcrumb.html
@@ -1,26 +1,1 @@
-<nav aria-label="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb hide-on-print">
-<small>
-<span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a itemprop="item" href="{{ "/" | absolute_url }}">
-<span itemprop="name">Beranda</span>
-</a>
-<meta itemprop="position" content="1" />
-</span>
-{% assign pos = 2 %} 
-{% if page.categories and page.categories.size > 0 %}
-{% assign category = page.categories[0] %}
-&nbsp;›&nbsp;
-<span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<a itemprop="item" href="{{ '/kategori/' | append: category | append: '/' | relative_url | downcase }}">
-<span itemprop="name">{{ category }}</span>
-</a>
-<meta itemprop="position" content="{{ pos }}" />
-</span>
-{% assign pos = pos | plus: 1 %}
-{% endif %}
-&nbsp;›&nbsp;
-<span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-<span itemprop="name">{{ page.title }}</span>
-<meta itemprop="position" content="{{ pos }}" /></span>
-</small>
-</nav>
+<nav aria-label="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb hide-on-print"><small><span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a itemprop="item" href="{{ "/" | absolute_url }}"><span itemprop="name">Beranda</span></a><meta itemprop="position" content="1" /></span>{% assign pos = 2 %} {% if page.categories and page.categories.size > 0 %}{% assign category = page.categories[0] %}&nbsp;›&nbsp;<span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a itemprop="item" href="{{ '/kategori/' | append: category | append: '/' | relative_url | downcase }}"><span itemprop="name">{{ category }}</span></a><meta itemprop="position" content="{{ pos }}" /></span>{% assign pos = pos | plus: 1 %}{% endif %}&nbsp;›&nbsp;<span itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><span itemprop="name">{{ page.title }}</span><meta itemprop="position" content="{{ pos }}" /></span></small></nav>
