--- a/_includes/style.css
+++ b/_includes/style.css
@@ -33,7 +33,7 @@ a:hover,a:focus,body.dark a:hover,body.dark a:focus{color:var(--grey)}
 body.dark .header-wrapper a svg path{fill:var(--white)}
 body.dark .header-wrapper{background:#202020e6;border-color:var(--grey)}
 .header-wrapper .left-section{display:flex;align-items:center;gap:16px}
-.header-wrapper .menu-btn{width:24px;height:24px;cursor:pointer;fill:currentColor;display:none}
+.header-wrapper .menu-btn{width:24px;height:24px;cursor:pointer;fill:currentColor}
 .header-wrapper .logo{font-weight:700;font-size:18px;text-decoration:none;color:inherit}
 .header-wrapper .center-section{flex:1;display:flex;justify-content:center;max-width:500px}
 .search-bar{display:flex;flex:1;border:1px solid #ccc;border-radius:20px;overflow:hidden;background:var(--white);transition:all .3s ease}
@@ -81,8 +81,8 @@ body.dark .sidebar-footer{border-color:#444;color:#aaa}
 {% assign column_layouts = "default,archive" | split: "," %}
 .layout{display:flex;flex-direction:{% unless column_layouts contains page.layout %}row{% else %}column{% endunless %};min-height:100vh}
 {% unless column_layouts contains page.layout %}
-.content-wrapper{padding:.5rem;width: calc(100% - 300px);transition:margin-left .3s ease}
-.right-sidebar{padding:.5rem}
+.content-wrapper{margin:.5rem;width: calc(100% - 300px);transition:margin-left .3s ease}
+.right-sidebar{margin:.5rem}
 .right-sidebar > div{margin:.5rem auto}
 .right-sidebar .sticky-box{position:sticky;top:3.5rem;width:300px}
 {% else %}
